# OrangeSodium

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  code_report.md  rules.md
OrangeSodiumTestingPlayground/: OrangeSodiumTestingPlayground.jucer
OrangeSodiumTestingPlayground/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/basic/: main.cpp  script.lua
examples/fft_test/: main.cpp
include/: orange_sodium.h
src/: console_utility.h  constants.h  context.h  effect.cpp  effect.h  effect_chain.cpp  effect_chain.h  error_handler.h  filter.cpp  filter.h  modulation.h  modulation_router.h  modulator_producer.cpp  modulator_producer.h  orange_sodium.cpp  oscillator.cpp  oscillator.h  program.cpp  program.h  resource_manager.cpp  resource_manager.h  signal_buffer.cpp  signal_buffer.h  simd.h  synthesizer.cpp  synthesizer.h  utilities.h  voice.cpp  voice.h
src/dsp/: biquad.cpp  biquad.h  convolution.cpp  convolution.h  delay_line.cpp  delay_line.h  fft.cpp  fft.h  interpolation.h
src/effects/: effect_distortion.cpp  effect_distortion.h  effect_filter.cpp  effect_filter.h  effect_freqdiffuse.cpp  effect_freqdiffuse.h  simple_distortion.cpp  simple_distortion.h
src/filters/: ZDF_filter.cpp  ZDF_filter.h
src/modulation_producers/: basic_envelope.cpp  basic_envelope.h
src/oscillators/: sine_osc.cpp  sine_osc.h  waveform_osc.cpp  waveform_osc.h
